methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: not found: value color
  faireV(color.YELLOW)
         ^MethodsPicture:30: error: not found: value color
  faireV(color.RED)
         ^MethodsPicture:31: error: not found: value color
  faireV(color.BLUE)
         ^MethodsPicture:32: error: not found: value color
  faireV(color.GREEN)
         ^