methods.picture.MethodsPicture.scala.code
override def run() {
  for(m<-1 to 3 ){
    faireLigne()
}
}

def faireV(c:Color){
     avance(2)
     setCouleurBrosse(c)
     baisseBrosse()
     gauche()
     leveBrosse()
     avance()
     droite()
     avance()
     baisseBrosse()
     leveBrosse()
     droite()
     avance()
     gauche()
     avance()
     baisseBrosse()
     leveBrosse()
     avance(2)
     gauche()
}

def faireMotif(){
  faireV(color.YELLOW)
  faireV(color.RED)
  faireV(color.BLUE)
  faireV(color.GREEN)
}

def faireLigne(){
    faireMotif()
    avance(7)
    faireMotif()
    avance(7)
    faireMotif()
    droite()
    recule(7)
    gauche()
    recule(14)
  
  }

